# chisel-releases-navigator

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  makefile  run.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: build-and-deploy.yaml  rebuild_index.yaml
dashboard/: package.json  webpack.config.js
dashboard/public/: base.html
dashboard/src/: Index.jsx  Page.jsx  style.scss  utils.js
dashboard/src/components/: PromoTab.jsx  SliceTableViewer.jsx  SubFooter.jsx
data_manager/: .gitignore  __main__.py  compile.py  data_manager.py  fetch.py  pyproject.toml  sdf_checker.py
data_manager/src/: __main__.py  compile.py  sdf_checker.py
data_scraper/: .gitignore  _common.py  data_scraper.py  makefile  pyproject.toml
